@@ -211,6 +211,7 @@ Version 1.5
  - Add Coolcam SOS Remote Key-Fob RC01Z (Nechry)
  - Add 2GIG Technologies CT32 Thermostat (Nechry)
  - Add KAIPULEK Celling PIR Sensor (Nechry)
+ - Add Sensative Strips Confort (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
